# sisyphus

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  mock_foreman.py  prd-ralph-cli-v2.json  prd-ralph-cli.json  prd-ralph-dashboard.json  prd-template.json  prd.json  progress-template.txt  progress.txt  pyproject.toml  swarm.py  test-prd.json  test_loop.json
docs/: THE_MANUAL.md
docs/specs/: openclaw_backend.md
src/ralph/: __init__.py  agents.py  cli.py  git_ops.py  hooks.py  prd.py  state.py
src/ralph/backends/: base.py  cli.py  openclaw.py
src/ralph_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_agents.py  test_cli.py  test_git_ops.py  test_hooks.py  test_state.py
tests/integration/: loop_strategy.md
web-vi/: package-lock.json  package.json  vitest.config.ts
web-vi/src/app/: layout.tsx  page.tsx
web-vi/src/components/: DiagramEditor.tsx  FrontPanel.test.tsx  FrontPanel.tsx  VIWorkspace.test.tsx  VIWorkspace.tsx  diagram.test.tsx  parentChildHelpers.ts
web-vi/src/components/nodes/: AddNode.tsx  NumericControlNode.tsx  NumericIndicatorNode.tsx  SubtractNode.tsx  WhileLoopNode.tsx  index.ts  nodes.test.tsx
web-vi/src/engine/: engine.test.ts  graphConverter.test.ts  graphConverter.ts  runner.ts  schema.ts  useExecution.test.ts  useExecution.ts
